--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,6 +33,7 @@ body,
 }
 
 .button {
+  cursor: pointer;
 }
 
 .button__text {
@@ -76,6 +77,12 @@ body,
   flex: 1;
   text-align: right;
   vertical-align: bottom;
+  transition: 0.3s;
+}
+
+.header__error-field_hidden {
+  opacity: 0;
+  transition: 0.3s;
 }
 
 .container {
@@ -102,10 +109,12 @@ body,
 }
 
 .banner {
-  height: var(--banner-height);
-  width: 100%;
-  border-radius: 5px;
-  border: 1px dashed red;
+}
+
+.banner__image {
+}
+
+.banner__text {
 }
 
 /* FORM  */
