--- a/src/css/style.css
+++ b/src/css/style.css
@@ -227,6 +227,8 @@ body,
   display: flex;
   justify-content: flex-end;
   margin-top: 15px;
+  width: fit-content;
+  margin-left: auto;
   font-size: 20px;
   color: var(--blue-color);
 }
