--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,6 +78,7 @@ body,
   text-align: right;
   vertical-align: bottom;
   transition: 0.3s;
+  white-space: pre-line;
 }
 
 .header__error-field_hidden {
@@ -209,11 +210,11 @@ body,
 }
 
 .banner-form__textarea {
+  font-family: Roboto, sans-serif;
   height: 100px;
   font-weight: normal;
   font-size: 20px;
   color: var(--white-color);
-  font-family: Roboto;
   padding-top: 5px;
 }
 
